[gd_scene load_steps=25 format=3 uid="uid://bveonkumweids"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_jambl"]
[ext_resource type="TileSet" uid="uid://k6xdmgt10fup" path="res://Assets/MenuTileMap.tres" id="2_rldg2"]
[ext_resource type="FontFile" uid="uid://cd1lslc06srhj" path="res://Assets/OldWizard.ttf" id="3_bobu8"]
[ext_resource type="Texture2D" uid="uid://bh7npoopp42sn" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/Skeleton1hp/Skeleton1.png" id="4_hx8yf"]
[ext_resource type="Texture2D" uid="uid://b0xmsu0ofsh2b" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/Skeleton1hp/Skeleton2.png" id="5_y155r"]
[ext_resource type="Texture2D" uid="uid://cik5ht2st3h2g" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/Skeleton1hp/Skeleton3.png" id="6_47u0e"]
[ext_resource type="Texture2D" uid="uid://degf8lglligrn" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/Skeleton1hp/Skeleton4.png" id="7_uhveo"]
[ext_resource type="Texture2D" uid="uid://ctvrufky8cjyl" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/Skeleton2hp/Skeleton1.png" id="8_cfgmf"]
[ext_resource type="Texture2D" uid="uid://dboke7fxwi818" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/Skeleton2hp/Skeleton2.png" id="9_ydr2p"]
[ext_resource type="Texture2D" uid="uid://ck10wxa3vlblv" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/Skeleton2hp/Skeleton3.png" id="10_ee8gk"]
[ext_resource type="Texture2D" uid="uid://bnybxp4l7jgvs" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/Skeleton2hp/Skeleton4.png" id="11_wo47b"]
[ext_resource type="Texture2D" uid="uid://dgkmhcqx3dc1f" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/Skeleton1.png" id="16_6uu64"]
[ext_resource type="AudioStream" uid="uid://hlx15npllh3h" path="res://Assets/Audio/Button Hover.mp3" id="16_ha8q1"]
[ext_resource type="Texture2D" uid="uid://cl4eitqoi3ef0" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/Skeleton2.png" id="17_etl3r"]
[ext_resource type="AudioStream" uid="uid://bfiadv6hg71ee" path="res://Assets/Audio/Game Over.mp3" id="17_s6s6h"]
[ext_resource type="Texture2D" uid="uid://cs2jc10ep3u4v" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/Skeleton3.png" id="18_hl6lu"]
[ext_resource type="Texture2D" uid="uid://coof8p1ukwbj3" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/Skeleton4.png" id="19_11h0t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r8qol"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iubjd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vhsq0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gil40"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oo0m3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vm2kc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fhbik"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_hx8yf")
}, {
"duration": 1.0,
"texture": ExtResource("5_y155r")
}, {
"duration": 1.0,
"texture": ExtResource("6_47u0e")
}, {
"duration": 1.0,
"texture": ExtResource("7_uhveo")
}],
"loop": true,
"name": &"idle1hp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_cfgmf")
}, {
"duration": 1.0,
"texture": ExtResource("9_ydr2p")
}, {
"duration": 1.0,
"texture": ExtResource("10_ee8gk")
}, {
"duration": 1.0,
"texture": ExtResource("11_wo47b")
}],
"loop": true,
"name": &"idle2hp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_6uu64")
}, {
"duration": 1.0,
"texture": ExtResource("17_etl3r")
}, {
"duration": 1.0,
"texture": ExtResource("18_hl6lu")
}, {
"duration": 1.0,
"texture": ExtResource("19_11h0t")
}],
"loop": true,
"name": &"idle3hp",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_6uu64")
}, {
"duration": 1.0,
"texture": ExtResource("17_etl3r")
}, {
"duration": 1.0,
"texture": ExtResource("18_hl6lu")
}, {
"duration": 1.0,
"texture": ExtResource("19_11h0t")
}],
"loop": true,
"name": &"idleNoOutline",
"speed": 4.0
}]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jambl")

[node name="TileMap2" type="TileMap" parent="."]
tile_set = ExtResource("2_rldg2")
format = 2
layer_0/tile_data = PackedInt32Array(786432, 131072, 3, 786454, 196608, 3, 0, 0, 3, 22, 65536, 3, 1, 0, 1, 2, 262144, 1, 3, 262144, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 262144, 1, 8, 262144, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 1, 14, 0, 2, 15, 65536, 2, 16, 0, 1, 17, 0, 1, 18, 0, 1, 19, 262144, 1, 20, 0, 1, 21, 0, 1, 786433, 65536, 1, 786434, 65536, 1, 786435, 327680, 1, 786436, 327680, 1, 786437, 65536, 1, 786438, 65536, 1, 786439, 131072, 2, 786440, 196608, 2, 786441, 65536, 1, 786442, 65536, 1, 786443, 65536, 1, 786444, 327680, 1, 786445, 65536, 1, 786446, 65536, 1, 786447, 65536, 1, 786448, 65536, 1, 786449, 65536, 1, 786450, 327680, 1, 786451, 327680, 1, 786452, 65536, 1, 786453, 65536, 1, 65558, 131072, 1, 131094, 393216, 1, 196630, 131072, 1, 262166, 131072, 1, 327702, 131072, 1, 393238, 131072, 1, 458774, 131072, 1, 524310, 393216, 1, 589846, 393216, 1, 655382, 131072, 1, 720918, 131072, 1, 720896, 196608, 1, 655360, 196608, 1, 589824, 458752, 1, 524288, 196608, 1, 458752, 196608, 1, 393216, 196608, 1, 327680, 196608, 1, 262144, 458752, 1, 196608, 458752, 1, 131072, 458752, 1, 65536, 196608, 1, 393230, 458752, 3, 327694, 458752, 3, 262158, 458752, 3, 196622, 458752, 3, 131086, 458752, 3, 65550, 458752, 3, 65549, 458752, 3, 65548, 458752, 3, 65547, 458752, 3, 65546, 458752, 3, 65545, 458752, 3, 65544, 458752, 3, 65543, 458752, 3, 65542, 458752, 3, 65541, 458752, 3, 65540, 458752, 3, 65539, 458752, 3, 65538, 458752, 3, 65537, 458752, 3, 131073, 458752, 3, 196609, 458752, 3, 262145, 458752, 3, 327681, 458752, 3, 393217, 458752, 3, 458753, 458752, 3, 524289, 458752, 3, 589825, 458752, 3, 655361, 458752, 3, 720897, 458752, 3, 720898, 458752, 3, 655362, 458752, 3, 589826, 458752, 3, 524290, 458752, 3, 458754, 458752, 3, 393218, 458752, 3, 327682, 458752, 3, 262146, 458752, 3, 196610, 458752, 3, 131074, 458752, 3, 131075, 458752, 3, 196611, 458752, 3, 262147, 458752, 3, 327683, 458752, 3, 393219, 458752, 3, 458755, 458752, 3, 524291, 458752, 3, 589827, 458752, 3, 655363, 458752, 3, 720899, 458752, 3, 720900, 458752, 3, 655364, 458752, 3, 589828, 458752, 3, 524292, 458752, 3, 458756, 458752, 3, 393220, 458752, 3, 327684, 458752, 3, 262148, 458752, 3, 196612, 458752, 3, 131076, 458752, 3, 131077, 458752, 3, 196613, 458752, 3, 262149, 458752, 3, 327685, 458752, 3, 393221, 458752, 3, 458757, 458752, 3, 524293, 458752, 3, 589829, 458752, 3, 655365, 458752, 3, 720901, 458752, 3, 720902, 458752, 3, 655366, 458752, 3, 589830, 458752, 3, 524294, 458752, 3, 458758, 458752, 3, 393222, 458752, 3, 327686, 458752, 3, 262150, 458752, 3, 196614, 458752, 3, 131078, 458752, 3, 131079, 458752, 3, 196615, 458752, 3, 262151, 458752, 3, 327687, 458752, 3, 393223, 458752, 3, 458759, 458752, 3, 524295, 458752, 3, 589831, 458752, 3, 655367, 458752, 3, 720903, 458752, 3, 720904, 458752, 3, 655368, 458752, 3, 589832, 458752, 3, 524296, 458752, 3, 458760, 458752, 3, 393224, 458752, 3, 327688, 458752, 3, 262152, 458752, 3, 196616, 458752, 3, 131080, 458752, 3, 131081, 458752, 3, 196617, 458752, 3, 262153, 458752, 3, 327689, 458752, 3, 393225, 458752, 3, 458761, 458752, 3, 524297, 458752, 3, 589833, 458752, 3, 655369, 458752, 3, 720905, 458752, 3, 720906, 458752, 3, 655370, 458752, 3, 589834, 458752, 3, 524298, 458752, 3, 458762, 458752, 3, 393226, 458752, 3, 327690, 458752, 3, 262154, 458752, 3, 196618, 458752, 3, 131082, 458752, 3, 131083, 458752, 3, 196619, 458752, 3, 262155, 458752, 3, 327691, 458752, 3, 393227, 458752, 3, 458763, 458752, 3, 524299, 458752, 3, 589835, 458752, 3, 655371, 458752, 3, 720907, 458752, 3, 720908, 458752, 3, 589836, 458752, 3, 524300, 458752, 3, 458764, 458752, 3, 393228, 458752, 3, 327692, 458752, 3, 262156, 458752, 3, 196620, 458752, 3, 131084, 458752, 3, 131085, 458752, 3, 262157, 458752, 3, 327693, 458752, 3, 393229, 458752, 3, 458765, 458752, 3, 524301, 458752, 3, 589837, 458752, 3, 655373, 458752, 3, 720909, 458752, 3, 720910, 458752, 3, 655374, 458752, 3, 589838, 458752, 3, 524302, 458752, 3, 458766, 458752, 3, 458767, 458752, 3, 393231, 458752, 3, 327695, 458752, 3, 262159, 458752, 3, 196623, 458752, 3, 131087, 458752, 3, 65551, 458752, 3, 65552, 262144, 0, 131088, 458752, 3, 196624, 458752, 3, 262160, 458752, 3, 327696, 458752, 3, 393232, 458752, 3, 458768, 458752, 3, 524304, 458752, 3, 524303, 458752, 3, 589839, 458752, 3, 655375, 458752, 3, 720911, 458752, 3, 720912, 458752, 3, 655376, 458752, 3, 589840, 458752, 3, 589841, 458752, 3, 524305, 458752, 3, 458769, 458752, 3, 393233, 458752, 3, 327697, 458752, 3, 262161, 262144, 0, 196625, 65536, 0, 131089, 65536, 0, 65553, 196608, 0, 65554, 131072, 0, 131090, 65536, 0, 196626, 262144, 0, 262162, 0, 0, 327698, 131072, 0, 393234, 65536, 0, 458770, 262144, 0, 524306, 458752, 3, 589842, 458752, 3, 655378, 458752, 3, 655377, 458752, 3, 720913, 458752, 3, 720914, 458752, 3, 720915, 458752, 3, 655379, 458752, 3, 589843, 458752, 3, 524307, 458752, 3, 458771, 0, 0, 393235, 262144, 0, 327699, 262144, 0, 262163, 196608, 0, 196627, 327680, 0, 131091, 131072, 0, 65555, 0, 0, 65556, 196608, 0, 131092, 65536, 0, 196628, 65536, 0, 262164, 262144, 0, 327700, 0, 0, 393236, 0, 0, 458772, 196608, 0, 524308, 65536, 0, 589844, 262144, 0, 655380, 458752, 3, 720916, 458752, 3, 720917, 262144, 0, 655381, 65536, 0, 589845, 196608, 0, 524309, 262144, 0, 458773, 131072, 0, 393237, 327680, 0, 327701, 196608, 0, 262165, 327680, 0, 196629, 65536, 0, 131093, 65536, 0, 65557, 131072, 0, 655372, 458752, 3, 196621, 458752, 3)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 39.0
offset_top = -946.0
offset_right = 139.0
offset_bottom = -862.0
grow_vertical = 0
scale = Vector2(0.689271, 0.689271)

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
theme_override_fonts/font = ExtResource("3_bobu8")
theme_override_styles/normal = SubResource("StyleBoxEmpty_r8qol")
theme_override_styles/focus = SubResource("StyleBoxEmpty_iubjd")
text = "Play"
alignment = 0

[node name="How to play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_bobu8")
theme_override_styles/normal = SubResource("StyleBoxEmpty_vhsq0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gil40")
text = "Instructions"
alignment = 0

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
theme_override_fonts/font = ExtResource("3_bobu8")
theme_override_styles/normal = SubResource("StyleBoxEmpty_oo0m3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vm2kc")
text = "Quit"
alignment = 0

[node name="ClickSFX" type="AudioStreamPlayer" parent="VBoxContainer"]
stream = ExtResource("16_ha8q1")
volume_db = 5.571

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(4, 5)
offset = Vector2(-3.75, -4.49)
anchor_mode = 0
zoom = Vector2(5.21, 5.21)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 48.0
offset_right = 258.0
offset_bottom = 102.0

[node name="Label" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_bobu8")
text = "That Time I got Reincarnated
as a Helpless Skeleton
(I am so scared)"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(249, 163)
scale = Vector2(2.26962, 2.26962)
sprite_frames = SubResource("SpriteFrames_fhbik")
animation = &"idle3hp"
speed_scale = 1.5
offset = Vector2(2.08245, -5.86873)

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_s6s6h")

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/How to play" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
